# methylsim

./: .gitignore  Cargo.toml  README.md  Snakefile  config.yml  pixi.toml
models/: e_coli_G6mATC_C5mCWGG.yaml
resources/: ZymoFecal_contig_1330.fasta  contig_bin.tsv
src/: cli.rs  config.rs  fastx.rs  io_utils.rs  main.rs  model.rs  motif.rs  pipeline.rs  presets.rs  simulator.rs  tagging.rs
tests/: integration_tests.rs
tests/data/: test_motifs.txt  test_reads.fastq  test_reads.sam  test_reference.fasta
workflow/: Snakefile  config.yml
workflow/envs/: mutation_simulator.toml
workflow/resources/: contig_bin.tsv  reference.fasta
