[package]
name = "methylsim"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
tempfile = "3.10"
shell-words = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
